<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="250dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_filter_title"
        android:textColor="@color/grayText"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/grayBorder"
        app:layout_constraintTop_toBottomOf="@id/textview" />
    <TextView
        android:id="@+id/category_filter_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/category_text"
        android:textColor="@color/grayText"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/divider" />
    <Spinner
        android:id="@+id/category_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toTopOf="@id/category_filter_prompt"
        app:layout_constraintBottom_toBottomOf="@id/category_filter_prompt"
        app:layout_constraintLeft_toRightOf="@id/category_filter_prompt"
        android:layout_marginStart="15dp"></Spinner>
    <TextView
        android:id="@+id/quantity_filter_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/quantity_range_text"
        android:textColor="@color/grayText"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/category_filter_prompt" />
    <Spinner
        android:id="@+id/quantity_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toTopOf="@id/quantity_filter_prompt"
        app:layout_constraintBottom_toBottomOf="@id/quantity_filter_prompt"
        app:layout_constraintLeft_toRightOf="@id/quantity_filter_prompt"
        android:layout_marginStart="15dp"></Spinner>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/filter_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="8dp"
        android:padding="10dp" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/filter_clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/filter_cancel_button"
        android:layout_margin="8dp"
        android:padding="10dp" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/filter_filter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/filter_clear_button"
        android:layout_margin="8dp"
        android:padding="10dp" />
</androidx.constraintlayout.widget.ConstraintLayout>