<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="230dp"
    android:layout_width="300dp" >
    <TextView
        android:id="@+id/dialog_delete_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_delete_title_placeholder"
        android:textColor="@color/grayText"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/grayBorder"
        app:layout_constraintTop_toBottomOf="@id/dialog_delete_title" />
    <TextView
        android:id="@+id/dialog_delete_prompt"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_confirmation_placeholder"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/grayText"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/divider2" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/delete_button"
        android:layout_marginBottom="10dp"
        android:padding="10dp" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/delete_cancel_button"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="10dp"
        android:padding="10dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
