<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/report_drawerlayout"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/report_view_toolbar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:title="@string/inventory_text"
            app:titleTextColor="@android:color/white"
            app:navigationIcon="@drawable/menu"
            android:background="@color/colorPrimary" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grayBackground"
                tools:context=".activities.ItemActivity">
                <ImageView
                    android:id="@+id/item_view_qrcode"
                    android:layout_width="350dp"
                    android:layout_height="350dp"
                    android:src="@drawable/qr_code"
                    app:layout_constraintTop_toBottomOf="@id/report_view_toolbar"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="30dp"/>
                <TextView
                    android:id="@+id/item_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_text"
                    android:alpha=".64"
                    app:layout_constraintTop_toBottomOf="@id/item_view_qrcode"
                    app:layout_constraintLeft_toLeftOf="@id/item_view_qrcode"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/grayText" />
                <TextView
                    android:id="@+id/report_view_report"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_name_placeholder"
                    app:layout_constraintTop_toBottomOf="@id/item_name_label"
                    app:layout_constraintLeft_toLeftOf="@id/item_name_label"
                    android:textSize="30sp" />
                <TextView
                    android:id="@+id/item_quantity_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity_text"
                    android:alpha=".64"
                    app:layout_constraintTop_toBottomOf="@id/report_view_report"
                    app:layout_constraintLeft_toLeftOf="@id/report_view_report"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/grayText" />
                <TextView
                    android:id="@+id/item_view_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_quantity_placeholder"
                    app:layout_constraintTop_toBottomOf="@id/item_quantity_label"
                    app:layout_constraintLeft_toLeftOf="@id/item_quantity_label"
                    android:textSize="30sp" />
                <TextView
                    android:id="@+id/item_view_weight_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_weight_text"
                    android:alpha=".64"
                    app:layout_constraintTop_toBottomOf="@id/item_view_quantity"
                    app:layout_constraintLeft_toLeftOf="@id/item_view_quantity"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/grayText" />
                <TextView
                    android:id="@+id/item_view_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_weight_text"
                    app:layout_constraintTop_toBottomOf="@id/item_view_weight_label"
                    app:layout_constraintLeft_toLeftOf="@id/item_view_weight_label"
                    android:textSize="30sp" />
                <TextView
                    android:id="@+id/item_view_desc_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_desc_text"
                    android:alpha=".64"
                    app:layout_constraintTop_toBottomOf="@id/item_view_weight"
                    app:layout_constraintLeft_toLeftOf="@id/item_view_weight"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/grayText" />
                <TextView
                    android:id="@+id/item_view_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_desc_text"
                    app:layout_constraintTop_toBottomOf="@id/item_view_desc_label"
                    app:layout_constraintLeft_toLeftOf="@id/item_view_desc_label"
                    android:textSize="30sp" />
                <TextView
                    android:id="@+id/item_view_price_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_price_text"
                    android:alpha=".64"
                    app:layout_constraintTop_toBottomOf="@id/item_view_desc"
                    app:layout_constraintLeft_toLeftOf="@id/item_view_desc"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/grayText" />
                <TextView
                    android:id="@+id/item_view_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_price_text"
                    app:layout_constraintTop_toBottomOf="@id/item_view_price_label"
                    app:layout_constraintLeft_toLeftOf="@id/item_view_price_label"
                    android:textSize="30sp" />
                <TextView
                    android:id="@+id/item_view_brand_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_brand_text"
                    android:alpha=".64"
                    app:layout_constraintTop_toBottomOf="@id/item_view_price"
                    app:layout_constraintLeft_toLeftOf="@id/item_view_price"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/grayText" />
                <TextView
                    android:id="@+id/item_view_brand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_brand_text"
                    app:layout_constraintTop_toBottomOf="@id/item_view_brand_label"
                    app:layout_constraintLeft_toLeftOf="@id/item_view_brand_label"
                    android:textSize="30sp" />
                <TextView
                    android:id="@+id/item_category_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categories_text"
                    android:alpha=".64"
                    app:layout_constraintTop_toBottomOf="@id/item_view_brand"
                    app:layout_constraintLeft_toLeftOf="@id/item_view_brand"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/grayText" />
                <TextView
                    android:id="@+id/item_view_categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_categories_placeholder"
                    app:layout_constraintTop_toBottomOf="@id/item_category_label"
                    app:layout_constraintLeft_toLeftOf="@id/item_category_label"
                    android:textSize="30sp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/report_navdrawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navdrawer_header"
        app:itemTextAppearance="@style/navdrawer_style"
        app:itemTextColor="@color/grayText" />
</androidx.drawerlayout.widget.DrawerLayout>