<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemform_view_drawerlayout"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/itemform_view_toolbar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:title="@string/inventory_text"
            app:titleTextColor="@android:color/white"
            app:navigationIcon="@drawable/menu"
            android:background="@color/colorPrimary" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/item_form_cl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grayBackground"
                android:paddingBottom="10dp"
                tools:context=".activities.ItemFormActivity">
                <ImageView
                    android:id="@+id/itemform_view_qrcode"
                    android:layout_width="350dp"
                    android:layout_height="350dp"
                    android:src="@drawable/qr_code"
                    app:layout_constraintTop_toBottomOf="@id/itemform_view_toolbar"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="30dp"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/itemform_gen_qr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gen_qrcode"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/grayBackground"
                    android:textColor="@color/grayText"
                    android:padding="0dp"
                    app:layout_constraintTop_toBottomOf="@id/itemform_view_qrcode"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:elevation="0dp"
                    style="?android:attr/borderlessButtonStyle"
                    />
                <TextView
                    android:id="@+id/itemform_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_text"
                    android:alpha=".64"
                    app:layout_constraintTop_toBottomOf="@id/itemform_view_qrcode"
                    app:layout_constraintLeft_toLeftOf="@id/itemform_view_qrcode"
                    android:layout_marginTop="40dp"
                    android:textColor="@color/grayText" />
                <EditText
                    android:id="@+id/itemform_name_edittext"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    app:layout_constraintTop_toBottomOf="@id/itemform_name_label"
                    app:layout_constraintLeft_toLeftOf="@id/itemform_name_label"/>
                <TextView
                    android:id="@+id/itemform_quantity_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity_text"
                    android:alpha=".64"
                    app:layout_constraintTop_toBottomOf="@id/itemform_name_edittext"
                    app:layout_constraintLeft_toLeftOf="@id/itemform_name_edittext"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/grayText" />
                <EditText
                    android:id="@+id/itemform_quantity_edittext"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:inputType="number"
                    app:layout_constraintTop_toBottomOf="@id/itemform_quantity_label"
                    app:layout_constraintLeft_toLeftOf="@id/itemform_quantity_label"/>
                <TextView
                    android:id="@+id/itemform_weight_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_weight_text"
                    android:alpha=".64"
                    app:layout_constraintTop_toBottomOf="@id/itemform_quantity_edittext"
                    app:layout_constraintLeft_toLeftOf="@id/itemform_quantity_edittext"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/grayText" />
                <EditText
                    android:id="@+id/itemform_weight_edittext"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:inputType="numberDecimal"
                    app:layout_constraintTop_toBottomOf="@id/itemform_weight_label"
                    app:layout_constraintLeft_toLeftOf="@id/itemform_weight_label"/>
                <TextView
                    android:id="@+id/itemform_desc_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_desc_text"
                    android:alpha=".64"
                    app:layout_constraintTop_toBottomOf="@id/itemform_weight_edittext"
                    app:layout_constraintLeft_toLeftOf="@id/itemform_weight_edittext"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/grayText" />
                <EditText
                    android:id="@+id/itemform_desc_edittext"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    app:layout_constraintTop_toBottomOf="@id/itemform_desc_label"
                    app:layout_constraintLeft_toLeftOf="@id/itemform_desc_label"/>
                <TextView
                    android:id="@+id/itemform_price_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_price_text"
                    android:alpha=".64"
                    app:layout_constraintTop_toBottomOf="@id/itemform_desc_edittext"
                    app:layout_constraintLeft_toLeftOf="@id/itemform_desc_edittext"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/grayText" />
                <EditText
                    android:id="@+id/itemform_price_edittext"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:inputType="numberDecimal"
                    app:layout_constraintTop_toBottomOf="@id/itemform_price_label"
                    app:layout_constraintLeft_toLeftOf="@id/itemform_price_label"/>
                <TextView
                    android:id="@+id/itemform_brand_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_brand_text"
                    android:alpha=".64"
                    app:layout_constraintTop_toBottomOf="@id/itemform_price_edittext"
                    app:layout_constraintLeft_toLeftOf="@id/itemform_price_edittext"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/grayText" />
                <EditText
                    android:id="@+id/itemform_brand_edittext"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    app:layout_constraintTop_toBottomOf="@id/itemform_brand_label"
                    app:layout_constraintLeft_toLeftOf="@id/itemform_brand_label"/>
                <TextView
                    android:id="@+id/itemform_category_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categories_text"
                    android:alpha=".64"
                    app:layout_constraintTop_toBottomOf="@id/itemform_brand_edittext"
                    app:layout_constraintLeft_toLeftOf="@id/itemform_brand_edittext"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/grayText" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/itemform_navdrawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navdrawer_header"
        app:itemTextAppearance="@style/navdrawer_style"
        app:itemTextColor="@color/grayText" />
</androidx.drawerlayout.widget.DrawerLayout>
