<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/account_icon_splash"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/account_icon_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23000002"
        app:srcCompat="@drawable/account" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/customer_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/customer_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/transparent"
        android:textColorHint="@android:color/transparent"
        android:textColorLink="@android:color/transparent"
        android:textCursorDrawable="@android:color/transparent"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_icon_splash"
        app:layout_constraintVertical_bias="0.16000003" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/employee_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/employee_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/transparent"
        android:textColorHint="@android:color/transparent"
        android:textColorLink="@android:color/transparent"
        android:textCursorDrawable="@android:color/transparent"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customer_button"
        app:layout_constraintVertical_bias="0.07999998" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/manager_button"
        android:backgroundTint="@android:color/transparent"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/manager_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/transparent"
        android:textColorHint="@android:color/transparent"
        android:textColorLink="@android:color/transparent"
        android:textCursorDrawable="@android:color/transparent"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/employee_button"
        app:layout_constraintVertical_bias="0.100000024" />
</androidx.constraintlayout.widget.ConstraintLayout>